crates/fai-tests/tests/fixtures/errors/Unbound.fai
module Unbound

// `missing` is not defined anywhere.
//~ ERROR FAI2001
let uses = missing 3
